# dbt-walker

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
docs/: REQUIREMENTS.md
examples/retail_demo/: README.md  dbt_project.yml  profiles.yml
examples/retail_demo/models/marts/: customer_first_order.sql  daily_revenue.sql  order_status_counts.sql  revenue_by_customer.sql
examples/retail_demo/models/staging/: stg_orders.sql
examples/retail_demo/seeds/: raw_orders.csv
scripts/: fetch_real_fixture.py  gen_fixture.py  mock_countmoney_warehouse.py
src/dbt_walker/: __init__.py  __main__.py  app.py  app_template.py  cli.py  columns.py  diff.py  graph.py  render.py
src/dbt_walker/_vendor/: README.md  mermaid.LICENSE
tests/: conftest.py  test_app.py  test_app_browser.py  test_app_parity.py  test_columns.py  test_countmoney.py  test_diff.py  test_generator.py  test_graph.py  test_perf.py  test_render.py
tests/fixtures/jaffle_shop_duckdb/: dbt_project.yml
